--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2025.11.12
 charset-normalizer==3.4.4
 exceptiongroup==1.3.1
 execnet==2.1.2
+Faker==37.12.0
 idna==3.11
 iniconfig==2.1.0
 Jinja2==3.1.6
@@ -17,4 +18,5 @@ python-dotenv==1.2.1
 requests==2.32.5
 tomli==2.3.0
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.2
